force-app/main/default/objects/CAMPX__Session__c/fields/CAMPX__Capacity__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Capacity__c</fullName>
    <description>The maximum number of attendees</description>
    <inlineHelpText>The maximum number of attendees</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>