force-app/main/default/objects/CAMPX__Session__c/fields/CAMPX__Description__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Description__c</fullName>
    <description>The session abstract giving attendees context about the event</description>
    <inlineHelpText>The session abstract giving attendees context about the event</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>