force-app/main/default/objects/CAMPX__Session__c/fields/CAMPX__Duration__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Duration__c</fullName>
    <description>The duration of the event in minutes</description>
    <inlineHelpText>The duration of the event in minutes</inlineHelpText>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>