force-app/main/default/objects/CAMPX__Session__c/fields/CAMPX__Event__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event the session will be hosted at</description>
    <inlineHelpText>The Event the session will be hosted at</inlineHelpText>
    <label>Event</label>
    <referenceTo>CAMPX__Event__c</referenceTo>
    <relationshipLabel>Session</relationshipLabel>
    <relationshipName>Session</relationshipName>
    <type>Lookup</type>
</CustomField>