force-app/main/default/objects/CAMPX__Session__c/fields/CAMPX__StartTime__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__StartTime__c</fullName>
    <description>The date &amp; time the session will begin</description>
    <inlineHelpText>The date &amp; time the session will begin</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>