force-app/main/default/objects/CAMPX__Session__c/listViews/CAMPX__All.listView-meta.xml
<ListView>
    <fullName>CAMPX__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>